--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "renan-joppert/lara-fuse",
+    "name": "larafuse/larafuse",
     "description": "Boilerplate com Docker, Laravel 11, Filament 3, Vue 3, Iconify Icons e Tradução Automática",
     "require": {}
 }
