Removing app key on .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 APP_NAME=Laravel
 APP_ENV=local
 
-APP_KEY=base64:p1uAU1k2ZiaMruP5V9Xaw/Da6zMnlknntHidHlN9KnE=
+APP_KEY=
 
 APP_DEBUG=true
 DEBUGBAR_ENABLED=true
