--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "php": "^8.2",
         "filament/filament": "^3.2",
+        "guava/filament-icon-picker": "^2.0",
         "inertiajs/inertia-laravel": "^1.3",
         "laravel/framework": "^11.9",
         "laravel/horizon": "^5.28",
